@startuml Database Schema Diagram
!define TABLE(x) entity x << (T,#FFAAAA) >>
!define PK(x) <u>x</u>
!define FK(x) <i>x</i>

skinparam linetype ortho
skinparam roundcorner 10

title Hệ thống Ngân hàng - Database Schema Diagram

' Core Tables
TABLE(Branches) {
    PK(branch_id) : INT
    branch_code : VARCHAR(20) **UNIQUE**
    branch_name : VARCHAR(200)
    address : VARCHAR(500)
    phone : VARCHAR(20)
    email : VARCHAR(100)
    FK(manager_id) : INT
    status : ENUM
    created_at : TIMESTAMP
}

TABLE(Roles) {
    PK(role_id) : INT
    role_name : VARCHAR(50) **UNIQUE**
    description : VARCHAR(500)
    created_at : TIMESTAMP
}

TABLE(Employees) {
    PK(employee_id) : INT
    employee_code : VARCHAR(20) **UNIQUE**
    FK(branch_id) : INT
    FK(role_id) : INT
    full_name : VARCHAR(200)
    email : VARCHAR(100) **UNIQUE**
    phone : VARCHAR(20)
    username : VARCHAR(50) **UNIQUE**
    password_hash : VARCHAR(255)
    status : ENUM
    created_at : TIMESTAMP
}

TABLE(Customers) {
    PK(customer_id) : INT
    customer_code : VARCHAR(20) **UNIQUE**
    full_name : VARCHAR(200)
    email : VARCHAR(100) **UNIQUE**
    phone : VARCHAR(20) **UNIQUE**
    id_card_number : VARCHAR(20)
    date_of_birth : DATE
    gender : ENUM
    address : VARCHAR(500)
    occupation : VARCHAR(100)
    monthly_income : DECIMAL(18,2)
    FK(registered_branch_id) : INT
    username : VARCHAR(50) **UNIQUE**
    password_hash : VARCHAR(255)
    status : ENUM
    created_at : TIMESTAMP
}

TABLE(CreditScores) {
    PK(score_id) : INT
    FK(customer_id) : INT
    score : INT [400-800]
    grade : ENUM
    calculated_at : TIMESTAMP
}

TABLE(AccountTypes) {
    PK(account_type_id) : INT
    type_code : VARCHAR(20) **UNIQUE**
    type_name : VARCHAR(100)
    description : VARCHAR(500)
    min_balance : DECIMAL(18,2)
    interest_rate : DECIMAL(5,2)
    status : ENUM
}

TABLE(Accounts) {
    PK(account_id) : INT
    account_number : VARCHAR(20) **UNIQUE**
    FK(customer_id) : INT
    FK(account_type_id) : INT
    FK(branch_id) : INT
    balance : DECIMAL(18,2)
    interest_rate : DECIMAL(5,2)
    opened_date : DATE
    status : ENUM
    created_at : TIMESTAMP
}

TABLE(Cards) {
    PK(card_id) : INT
    card_number : VARCHAR(255) **ENCRYPTED**
    FK(account_id) : INT
    card_type : ENUM
    issue_date : DATE
    expiry_date : DATE
    cvv : VARCHAR(255) **ENCRYPTED**
    credit_limit : DECIMAL(18,2)
    status : ENUM
    activated_at : TIMESTAMP
    created_at : TIMESTAMP
}

TABLE(Transactions) {
    PK(transaction_id) : INT
    transaction_number : VARCHAR(50) **UNIQUE**
    FK(from_account_id) : INT
    FK(to_account_id) : INT
    transaction_type : ENUM
    amount : DECIMAL(18,2)
    fee : DECIMAL(18,2)
    description : VARCHAR(500)
    status : ENUM
    transaction_date : TIMESTAMP
    created_at : TIMESTAMP
}

TABLE(SavingsDeposits) {
    PK(savings_id) : INT
    savings_number : VARCHAR(50) **UNIQUE**
    FK(customer_id) : INT
    FK(account_id) : INT
    principal_amount : DECIMAL(18,2)
    interest_rate : DECIMAL(5,2)
    term_months : INT
    maturity_date : DATE
    interest_payment_method : ENUM
    status : ENUM
    opened_date : DATE
    created_at : TIMESTAMP
}

TABLE(SavingsTransactions) {
    PK(savings_transaction_id) : INT
    FK(savings_id) : INT
    transaction_type : ENUM
    amount : DECIMAL(18,2)
    interest_amount : DECIMAL(18,2)
    transaction_date : TIMESTAMP
    description : VARCHAR(500)
    created_at : TIMESTAMP
}

TABLE(Collaterals) {
    PK(collateral_id) : INT
    FK(customer_id) : INT
    collateral_type : ENUM
    description : VARCHAR(1000)
    estimated_value : DECIMAL(18,2)
    appraised_value : DECIMAL(18,2)
    appraised_by : INT
    appraised_date : DATE
    status : ENUM
    created_at : TIMESTAMP
}

TABLE(Loans) {
    PK(loan_id) : INT
    loan_number : VARCHAR(50) **UNIQUE**
    FK(customer_id) : INT
    FK(collateral_id) : INT
    FK(approved_by) : INT
    loan_type : ENUM
    principal_amount : DECIMAL(18,2)
    approved_amount : DECIMAL(18,2)
    interest_rate : DECIMAL(5,2)
    term_months : INT
    monthly_payment : DECIMAL(18,2)
    outstanding_balance : DECIMAL(18,2)
    ltv_ratio : DECIMAL(5,2)
    status : ENUM
    purpose : VARCHAR(500)
    approved_date : DATE
    disbursement_date : DATE
    maturity_date : DATE
    created_at : TIMESTAMP
}

TABLE(LoanPayments) {
    PK(payment_id) : INT
    FK(loan_id) : INT
    payment_number : VARCHAR(50) **UNIQUE**
    due_date : DATE
    payment_date : DATE
    principal_amount : DECIMAL(18,2)
    interest_amount : DECIMAL(18,2)
    penalty_amount : DECIMAL(18,2)
    total_amount : DECIMAL(18,2)
    status : ENUM
    days_overdue : INT
    created_at : TIMESTAMP
}

TABLE(CreditScoreHistory) {
    PK(history_id) : INT
    FK(customer_id) : INT
    FK(score_id) : INT
    previous_score : INT
    new_score : INT
    change_reason : VARCHAR(500)
    changed_at : TIMESTAMP
}

' Relationships
Branches ||--o{ Employees : "has"
Branches ||--o{ Customers : "registers"
Branches ||--o{ Accounts : "manages"
Branches }o--|| Employees : "managed_by"

Roles ||--o{ Employees : "has"

Employees ||--o{ Loans : "approves"
Employees ||--o{ Collaterals : "appraises"

Customers ||--o{ Accounts : "owns"
Customers ||--o{ CreditScores : "has"
Customers ||--o{ Loans : "borrows"
Customers ||--o{ SavingsDeposits : "opens"
Customers ||--o{ Collaterals : "provides"
Customers ||--o{ CreditScoreHistory : "tracks"

AccountTypes ||--o{ Accounts : "categorizes"

Accounts ||--o{ Cards : "has"
Accounts ||--o{ Transactions : "from"
Accounts ||--o{ Transactions : "to"
Accounts ||--o{ SavingsDeposits : "funds"

CreditScores ||--o{ CreditScoreHistory : "tracks"

Loans ||--o{ LoanPayments : "has"
Loans }o--|| Collaterals : "secured_by"

SavingsDeposits ||--o{ SavingsTransactions : "has"

note right of Accounts
  **Indexes:**
  - account_number (UNIQUE)
  - customer_id
  - branch_id
  - status
end note

note right of Transactions
  **Indexes:**
  - transaction_number (UNIQUE)
  - from_account_id
  - to_account_id
  - transaction_date
  - status
end note

note right of Loans
  **Indexes:**
  - loan_number (UNIQUE)
  - customer_id
  - status
  - maturity_date
end note

note bottom of MySQLDB
  **Database Features:**
  - 19 bảng chính
  - Foreign Key Constraints
  - Triggers tự động
  - Stored Procedures
  - Views tổng hợp
  - Indexes tối ưu
end note

@enduml

